补充相关功能

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -9,6 +9,7 @@
      2. 已知|可能存在的问题：
         (1). 多层泛型可能会出错
         (2). ts文件import的路径可能不正确
+        (3). 继承、实现之类的仍待实现
     ]]></description>
 
   <change-notes><![CDATA[
