--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
   <id>org.freeone.2ts4j</id>
   <name>j-bean to ts-bean</name>
   <version>0.0.1</version>
-  <vendor email="fackone@qq.com" url="http://www.baidu.com">hahah</vendor>
+  <vendor email="fackone@qq.com" url=""></vendor>
 
   <description><![CDATA[
      1. 仅支持普通java bean 转成ts对象
