修改获取字段没有返回this的问题，真修复

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -10,10 +10,13 @@
         (1). 多层泛型可能会出错
         (2). ts文件import的路径可能不正确
         (3). 继承、实现之类的仍待实现
+        (4). 泛型的引用尚未实现
+        (5). Map的kv尚未实现
     ]]></description>
 
   <change-notes><![CDATA[
       2020-07-30 完成0.0.1
+      2020-07-30 完成0.0.2
     ]]>
   </change-notes>
 
