--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
   <id>org.freeone.2ts4j</id>
-  <name>j-bean to ts-bean</name>
+  <name>java bean to ts bean</name>
   <version>0.0.2</version>
   <vendor email="fackone@qq.com" url=""></vendor>
 
@@ -33,7 +33,7 @@
 
   <actions>
     <!-- Add your actions here -->
-    <action id="FirstAction" class="FirstAction" text="j-bean 2 ts-bean" description="j-bean to ts-bean">
+    <action id="FirstAction" class="FirstAction" text="java bean to ts bean" description="java bean to ts bean">
       <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
       <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl alt T"/>
     </action>
