--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,22 +1,24 @@
 <idea-plugin>
   <id>org.freeone.2ts4j</id>
   <name>java bean to ts bean</name>
-  <version>0.0.2</version>
+  <version>0.0.4</version>
   <vendor email="fackone@qq.com" url=""></vendor>
 
   <description><![CDATA[
      1. 仅支持普通java bean 转成ts对象
-     2. 已知|可能存在的问题：
+     2. java方法体代码不转换，只转换返回值
+     3. 已知|可能存在的问题：
         (1). 多层泛型可能会出错
         (2). ts文件import的路径可能不正确
         (3). 继承、实现之类的仍待实现
         (4). 泛型的引用尚未实现
-        (5). Map的kv尚未实现
+
     ]]></description>
 
   <change-notes><![CDATA[
       2020-07-30 完成0.0.1
       2020-07-30 完成0.0.2
+      2020-07-30 完成0.0.3
     ]]>
   </change-notes>
 
