修改plugin.xml的信息

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -2,26 +2,39 @@
   <id>org.freeone.2ts4j</id>
   <name>java bean to ts bean</name>
   <version>0.0.4</version>
-  <vendor email="fackone@qq.com" url=""></vendor>
+  <vendor email="fackone@qq.com" url="">Lqq</vendor>
 
   <description><![CDATA[
-    选择文件或者选择单个文件夹  ,右键，并点击 【java bean to ts bean】菜单，选择ts文件保存的路径，路径最好不要是根路径，点击确定，然后去选择的文件看生成的文件
 
-     1. 仅支持普通java bean 转成ts对象
+  Support for converting simple Java beans to Typescript beans \n
+
+  Select a Java Bean file or select a single folder, then right-click,
+  and click the "Java Bean to TS Bean" menu, select the path to save the TS file,
+ "the target path should not be the root path", click OK,
+ and then go to the target folder to see the generated files
+  1. Support for converting normal Java beans to Typescript beans,Complex Java code cannot be converted
+  2. The Java method body code does not convert, only the return value
+  3. Fields in java bean require this. e.g.  'this.name'
+  4. some problems：
+     (1). Multilayer generics can cause errors，e.g.   There may be some problems to convert Request<Response<Map<T,V>>>.
+     (2). The import path for ts files may not be correct.
+     (3). constructor ?
+
+  支持简单的java bean 转换成 typescript bean
+  选择一个java bean文件或者选择单个文件夹  ,然后点击鼠标右键，
+  并点击 【java bean to ts bean】菜单，选择ts文件要保存的路径，【目标路径最好不要是根路径】，点击确定，然后去目标文件夹中看生成的文件
+     1. 仅支持普通java bean 转成Typescript bean,无法转换复杂的java代码
      2. java方法体代码不转换，只转换返回值
-     3. 已知|可能存在的问题：
-        (1). 多层泛型可能会出错
+     3. java bean的字段需要带有this.例如 this.name
+     4. 已知|可能存在的问题：
+        (1). 多层泛型可能会出错, 例如，  Request<Response<Map<T,V>>> 会出错
         (2). ts文件import的路径可能不正确
-        (3). 继承、实现之类的仍待实现
-        (4). 泛型的引用尚未实现
-        (5). java代码不能转换
+        (3). 考虑加入构造方法
 
     ]]></description>
 
   <change-notes><![CDATA[
-      2020-07-30 完成0.0.1
-      2020-07-30 完成0.0.2
-      2020-07-30 完成0.0.3
+      2020.08.01 0.0.4 some
     ]]>
   </change-notes>
 
