--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,38 +1,42 @@
 <idea-plugin>
   <id>org.freeone.2ts4j</id>
   <name>java bean to ts bean</name>
-  <version>0.0.4</version>
+  <version>0.0.5</version>
   <vendor email="fackone@qq.com" url="">Lqq</vendor>
 
-  <description><![CDATA[
+  <description>
 
-  Support for converting simple Java beans to Typescript beans \n
+  Support for converting simple Java beans to Typescript beans    &lt;br/&gt;
 
-  Select a Java Bean file or select a single folder, then right-click,
-  and click the "Java Bean to TS Bean" menu, select the path to save the TS file,
- "the target path should not be the root path", click OK,
- and then go to the target folder to see the generated files
-  1. Support for converting normal Java beans to Typescript beans,Complex Java code cannot be converted
-  2. The Java method body code does not convert, only the return value
-  3. Fields in java bean require this. e.g.  'this.name'
-  4. some problems：
-     (1). Multilayer generics can cause errors，e.g.   There may be some problems to convert Request<Response<Map<T,V>>>.
-     (2). The import path for ts files may not be correct.
-     (3). constructor ?
+    Select a Java Bean file or select a single folder, then right-click,    &lt;br/&gt;
+   and click the "Java Bean to TS Bean" menu, select the path to save the TS file,    &lt;br/&gt;
+ "the target path should not be the root path", click OK,    &lt;br/&gt;
+ and then go to the target folder to see the generated files    &lt;br/&gt;
+  1. Support for converting normal Java beans to Typescript beans,Complex Java code cannot be converted    &lt;br/&gt;
+  2. The Java method body code does not convert, only the return value    &lt;br/&gt;
+  3. Fields in java bean require this. e.g.  'this.name'    &lt;br/&gt;
+  4. some problems：    &lt;br/&gt;
+     (1). Multilayer generics can cause errors，e.g.   There may be some problems to convert Request《Response《Map《K,V》》》.    &lt;br/&gt;
+     (2). The import path for ts files may not be correct.    &lt;br/&gt;
+     (3). constructor ?    &lt;br/&gt;
 
-  支持简单的java bean 转换成 typescript bean
-  选择一个java bean文件或者选择单个文件夹  ,然后点击鼠标右键，
-  并点击 【java bean to ts bean】菜单，选择ts文件要保存的路径，【目标路径最好不要是根路径】，点击确定，然后去目标文件夹中看生成的文件
-     1. 仅支持普通java bean 转成Typescript bean,无法转换复杂的java代码
-     2. java方法体代码不转换，只转换返回值
-     3. java bean的字段需要带有this.例如 this.name
-     4. 已知|可能存在的问题：
-        (1). 多层泛型可能会出错, 例如，  Request<Response<Map<T,V>>> 会出错
-        (2). ts文件import的路径可能不正确
-        (3). 考虑加入构造方法
+  支持简单的java bean 转换成 typescript bean    &lt;br/&gt;
+  选择一个java bean文件或者选择单个文件夹  ,然后点击鼠标右键，    &lt;br/&gt;
+  并点击 【java bean to ts bean】菜单，选择ts文件要保存的路径，【目标路径最好不要是根路径】，点击确定，然后去目标文件夹中看生成的文件    &lt;br/&gt;
+     1. 仅支持普通java bean 转成Typescript bean,无法转换复杂的java代码    &lt;br/&gt;
+     2. java方法体代码不转换，只转换返回值    &lt;br/&gt;
+     3. java bean的字段需要带有this.例如 this.name    &lt;br/&gt;
+     4. 已知|可能存在的问题：    &lt;br/&gt;
+        (1). 多层泛型可能会出错, 例如， Request《Response《Map《K,V》》》  会出错     &lt;br/&gt;
+        (2). ts文件import的路径可能不正确    &lt;br/&gt;
+        (3). 考虑加入构造方法  &lt;br/&gt;
 
-    ]]></description>
+    </description>
 
+  <change-notes>
+      2020.08.01 0.0.4 some  &lt;br/&gt;
+
+  </change-notes>
   <change-notes><![CDATA[
       2020.08.01 0.0.4 some
     ]]>
@@ -46,15 +50,19 @@
   <depends>com.intellij.modules.platform</depends>
 
   <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
+      <toolWindow canCloseContents="true" anchor="bottom"
+                  id="输出"
+                  factoryClass="org.freeone.window.MyToolWindow">
+      </toolWindow>
   </extensions>
 
   <actions>
+
     <!-- Add your actions here -->
     <action id="FirstAction" class="FirstAction" text="java bean to ts bean" description="java bean to ts bean">
-      <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
-      <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl alt T"/>
+        <add-to-group group-id="ProjectViewPopupMenuModifyGroup" anchor="after" relative-to-action="$Delete"/>
     </action>
+
   </actions>
 
 </idea-plugin>
