--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -52,6 +52,7 @@
   <extensions defaultExtensionNs="com.intellij">
 <!--      <toolWindow canCloseContents="true" anchor="bottom"   id="输出"  factoryClass="org.freeone.window.MyToolWindow">-->
 <!--      </toolWindow>-->
+      <toolWindow id="java bean to ts bean result" anchor="right" factoryClass="org.freeone.window.MyToolWindowFactory" secondary="true"/>
   </extensions>
 
   <actions>
