--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -25,7 +25,7 @@
         <action id="FirstAction" class="FirstAction" text="java bean to ts bean" description="java bean to ts bean">
             <add-to-group group-id="ProjectViewPopupMenuModifyGroup" anchor="after" relative-to-action="$Delete"/>
         </action>
-        <action id="ApiDocGeneratorAction" class="org.freeone.ApiDocGeneratorAction" text="ApiDocGeneratorAction"
+        <action id="ApiDocGeneratorAction" class="ApiDocGeneratorAction" text="ApiDocGeneratorAction"
                 description="ApiDocGeneratorAction">
             <add-to-group group-id="ProjectViewPopupMenuModifyGroup" anchor="after" relative-to-action="$Delete"/>
         </action>
