--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://github.com/AFreeOne">
     <id>org.freeone.2ts4j</id>
     <name>java bean to ts bean</name>
-    <version>0.0.8</version>
+    <version>0.0.9</version>
     <vendor email="1357441309@qq.com" url="https://github.com/AFreeOne">LiQingQing</vendor>
 
     <description>
@@ -29,10 +29,10 @@
         <action id="FirstAction" class="FirstAction" text="java bean to ts bean" description="java bean to ts bean">
             <add-to-group group-id="ProjectViewPopupMenuModifyGroup" anchor="after" relative-to-action="$Delete"/>
         </action>
-       <!-- <action id="ApiDocGeneratorAction" class="ApiDocGeneratorAction" text="ApiDocGeneratorAction"
+        <action id="ApiDocGeneratorAction" class="ApiDocGeneratorAction" text="ApiDocGeneratorAction"
                 description="ApiDocGeneratorAction">
             <add-to-group group-id="ProjectViewPopupMenuModifyGroup" anchor="after" relative-to-action="$Delete"/>
-        </action>-->
+        </action>
     </actions>
 
 </idea-plugin>
