--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -22,7 +22,7 @@
         <toolWindow id="java bean to ts bean result" anchor="bottom"
                     factoryClass="org.freeone.window.MyToolWindowFactory"/>
         <applicationService serviceImplementation="org.freeone.setting.JBean2TsBeanComponent"/>
-        <applicationConfigurable instance="org.freeone.setting.JBean2TsBeanSettingFromIdea" dynamic="false"
+        <applicationConfigurable instance="org.freeone.setting.JBean2TsBeanSettingFromIdea" dynamic="true"
                                  id="JBean2TsBeanSettingTest"/>
     </extensions>
     <actions>
