--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -20,10 +20,10 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="java bean to ts bean result" anchor="bottom"
+        <toolWindow id="javaBeanToTsBeanLogResult " anchor="bottom"
                     factoryClass="org.freeone.window.MyToolWindowFactory"/>
         <applicationService serviceImplementation="org.freeone.setting.JBean2TsBeanComponent"/>
-        <applicationConfigurable instance="org.freeone.setting.JBean2TsBeanSettingFromIdea" dynamic="true"
+        <applicationConfigurable instance="org.freeone.setting.JBean2TsBeanSettingFromIdea"
                                  id="JBean2TsBeanSettingTest"/>
     </extensions>
     <actions>
